# SIFTObjectModel

./: .gitignore  CMakeLists.txt  DisplayCloudCorrespondences.xml  ELCH_gigabitye  ELCH_loyd  README.md  czystetesty  lum_gigabyte  lum_loyd  testy  testyELCHLoyd  testyELCHgigabite  testyLUMGIGAbyte  testyLUMloyd  testydooctave
backup/: GenerateModelLUM.xml
src/: CMakeLists.txt  SIFTObjectModelConfig.cmake.in
src/Components/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  PointXYZSIFT.hpp
src/Components/ClosedCloudMerge/: CMakeLists.txt  ClosedCloudMerge.cpp  ClosedCloudMerge.hpp
src/Components/CloudCutter/: CMakeLists.txt  CMakeLists.txt~  CloudCutter.cpp  CloudCutter.hpp
src/Components/CloudMerge/: CMakeLists.txt  CloudMerge.cpp  CloudMerge.hpp
src/Components/CloudTransformer/: CMakeLists.txt  CloudTransformer.cpp  CloudTransformer.hpp
src/Components/CloudViewer/: CMakeLists.txt  CloudViewer.cpp  CloudViewer.hpp
src/Components/ComputeDistance/: CMakeLists.txt  ComputeDistance.cpp  ComputeDistance.hpp
src/Components/ComputeTrans/: ComputeTrans.cpp  ComputeTrans.hpp
src/Components/ConflictGraph/: CMakeLists.txt  ConflictGraph.cpp  ConflictGraph.hpp
src/Components/CorrespondenceMatcher/: CMakeLists.txt  CorrespondenceMatcher.cpp  CorrespondenceMatcher.hpp
src/Components/CorrespondencesViewer/: CMakeLists.txt  CorrespondencesViewer.cpp  CorrespondencesViewer.cpp.orig  CorrespondencesViewer.hpp
src/Components/CuboidModelGenerator/: CMakeLists.txt  CuboidModelGenerator.cpp  CuboidModelGenerator.hpp
src/Components/CvGaussianBlur/: CMakeLists.txt
src/Components/CylinderModelGenerator/: CMakeLists.txt  CylinderModelGenerator.cpp  CylinderModelGenerator.hpp
src/Components/Downsampling/: CMakeLists.txt  CMakeLists.txt~  Downsampling.cpp  Downsampling.hpp
src/Components/DrawCSystem/: CMakeLists.txt  DrawCSystem.cpp  DrawCSystem.hpp
src/Components/ELECHGenerator/: CMakeLists.txt  ELECHGenerator.cpp  ELECHGenerator.hpp
src/Components/FeatureCloudConverter/: CMakeLists.txt  FeatureCloudConverter.cpp  FeatureCloudConverter.hpp
src/Components/GaussCloud/: CMakeLists.txt  GaussCloud.cpp  GaussCloud.hpp
src/Components/GlobalHypothesesVerification/: CMakeLists.txt  GlobalHypothesesVerification.cpp  GlobalHypothesesVerification.hpp
src/Components/GreedyVerification/: CMakeLists.txt  GreedyVerification.cpp  GreedyVerification.hpp
src/Components/InstanceGenerator/: CMakeLists.txt  InstanceGenerator.cpp  InstanceGenerator.hpp
src/Components/LUMGenerator/: CMakeLists.txt  LUMGenerator.cpp  LUMGenerator.hpp
src/Components/NormalEstimation/: CMakeLists.txt  NormalEstimation.cpp  NormalEstimation.hpp
src/Components/OpenCloudMerge/: CMakeLists.txt  OpenCloudMerge.cpp  OpenCloudMerge.hpp
src/Components/PC2Octree/: CMakeLists.txt  CMakeLists.txt~  PC2Octree.cpp  PC2Octree.cpp~  PC2Octree.hpp  PC2Octree.hpp~  PCL2Octree.cpp~  PCL2Octree.hpp~
src/Components/PC2SOM/: CMakeLists.txt  PC2SOM.cpp  PC2SOM.hpp
src/Components/PCDReader/: PCDReader.cpp  PCDReader.hpp
src/Components/PCDWriter/: CMakeLists.txt  PCDWriter.cpp  PCDWriter.hpp
src/Components/PassThrough/: CMakeLists.txt  PassThrough.cpp  PassThrough.hpp
src/Components/Projection/: CMakeLists.txt  Projection.cpp  Projection.hpp
src/Components/ProjectionGrouping/: CMakeLists.txt  ProjectionGrouping.cpp  ProjectionGrouping.hpp
src/Components/ReprojectionError/: CMakeLists.txt  ReprojectionError.cpp  ReprojectionError.hpp
src/Components/SIFTAdder/: CMakeLists.txt
src/Components/SIFTClusterExtraction/: CMakeLists.txt  SIFTClusterExtraction.cpp  SIFTClusterExtraction.hpp
src/Components/SIFTNOMJSONWriter/: CMakeLists.txt  SIFTNOMJSONWriter.cpp  SIFTNOMJSONWriter.hpp
src/Components/SIFTNOMReader/: CMakeLists.txt  SIFTNOMReader.cpp  SIFTNOMReader.hpp
src/Components/SIFTNOMWriter/: CMakeLists.txt  SIFTNOMWriter.cpp  SIFTNOMWriter.hpp
src/Components/SIFTObjectMatcher/: CMakeLists.txt  CMakeLists.txt~  SIFTObjectMatcher.cpp  SIFTObjectMatcher.hpp
src/Components/SOMGenerator/: CMakeLists.txt  SOMGenerator.cpp  SOMGenerator.hpp
src/Components/SOMJSONReader/: CMakeLists.txt  SOMJSONReader.cpp  SOMJSONReader.hpp
src/Components/SOMJSONWriter/: CMakeLists.txt  SOMJSONWriter.cpp  SOMJSONWriter.hpp
src/Components/SOMs2PC/: CMakeLists.txt  SOMs2PC.cpp  SOMs2PC.hpp
src/Components/SingleSOMJsonReader/: CMakeLists.txt  SingleSOMJsonReader.cpp  SingleSOMJsonReader.hpp
src/Components/SolveChessboardLoc/: CMakeLists.txt  SolveChessboardLoc.cpp  SolveChessboardLoc.hpp
src/Components/TransformCloud/: CMakeLists.txt  TransformCloud.cpp  TransformCloud.hpp
src/Components/Update/: CMakeLists.txt  Update.cpp  Update.cpp~  Update.hpp  Update.hpp~
src/Components/VectorToSequence/: CMakeLists.txt  VectorToSequence.cpp  VectorToSequence.hpp
src/Components/Visualization/: CMakeLists.txt  Visualization.cpp  Visualization.hpp
src/Components/xyzrgb2xyzsift/: CMakeLists.txt  xyzrgb2xyzsift.cpp  xyzrgb2xyzsift.hpp
src/Types/: CMakeLists.txt  CorrespondenceEstimationColor.hpp  MergeUtils.cpp  MergeUtils.hpp  PointCloudObject.hpp  PointXYZDescriptor.hpp  PointXYZRGBSIFT.hpp  PointXYZSIFT.hpp  SIFTObjectInstance.hpp  SIFTObjectModel.hpp  SIFTObjectModelFactory.hpp
tasks/: 2CloudsChanged.xml  2CloudsChangedLUM.xml  ComputeDistance.xml  DetectCircles.xml  DisplayCloudCorrespondences.xml  DisplayCloudCorrespondences_depth.xml  DisplayCorrespondences.xml  DisplayPCDVoxelGrid.xml  DisplayRGBandSIFT.xml  DisplaySOM.xml  FiducialBoardPositioningTest.xml  GenerateCuboidModel.xml  GenerateCylinderModel.xml  GenerateELCHFromClouds  GenerateELCHFromClouds.xml  GenerateMap.xml  GenerateModel.xml  GenerateModelELECH.xml  GenerateModelLUM.xml  GenerateModelLUM_depthxyz.xml  GenerateModelLUM_depthxyz2.xml  GenerateModelTrigerred.xml  GenerateModelTriggered.xml  GenerateModelTriggeredBezNormal.xml  GenerateModelTriggeredKinect.xml  GenerateModelfromclouds.xml  GenerateView.xml  GreedyVerification.xml  GroundTruthSequenceInverseTest.xml  GroundTruthSequenceTest.xml  GroundTruthTest.xml  HypothesesVerification.xml  (+24 more)
(+3 files in other folders)
